Articles in cards and responsiveness

--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -13,16 +13,19 @@
 
   <div class="field">
     <%= form.label :title %>
+    <br>
     <%= form.text_field :title %>
   </div>
 
   <div class="field">
     <%= form.label :text %>
-    <%= form.text_field :text %>
+    <br>
+    <%= form.text_area :text %>
   </div>
 
   <div class="field">
     <%= form.label :author %>
+    <br>
     <%= form.text_field :author %>
   </div>
 
