--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,6 +1,6 @@
+<div class="column">
 <h1 class="col-12">Editing Article</h1>
-
-<%= render 'form', article: @article %>
-
 <%= link_to 'Show', @article %> |
 <%= link_to 'Back', articles_path %>
+<%= render 'form', article: @article %>
+</div>
